--- a/frontend/client/public/index.html
+++ b/frontend/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>우아하고 형제들의 문방구</title>
+    <title>우아하고 건강한 형제들의 문방구</title>
   </head>
   <body>
     <div id="root"></div>
